<resources>
    <string name="app_name">GDS Event App</string>
    <string name="i_agree_to_the_terms_conditions_and_privacy_policy">I agree to the <b>Terms &amp; Conditions</b> and <b>Privacy Policy</b></string>
    <string name="continue_with_mobile_number">Continue with Mobile Number</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="event">Events</string>
    <string name="connect">Connect</string>
    <string name="invite">Invite</string>
    <string name="chats">Chats</string>
    <string name="tool_image">tool image</string>
    <string name="event_carousel_description"><p>Goa Chamber of Commerce &amp;Industry Presents - Goa\'s First ever developers summit</p></string>
    <string name="img">img</string>
    <string name="event_carousel_time">10:00 AM - 5:00 PM</string>
    <string name="event_carousel_date">16th August 2022</string>
    <string name="event_carousel_venue"><p>Ravindra Bhavan - Margao</p></string>
    <string name="event_carousel_title"><p>Goa Developer\'s Summit</p></string>
    <string name="buy_tickets">Buy Tickets</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="virtual_and_in_person_events_near_you">Virtual and in-person events near you</string>
    <string name="name"><p>Name</p></string>
    <string name="ghhviugyv"><p>ghhviugyv</p></string>
    <string name="event_details">EVENT DETAILS</string>
    <string name="import_image">Import_image</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="about_me">ABOUT ME</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="login_with_your_mobile_number">Login with your Mobile Number</string>
    <string name="continue_1">continue</string>
    <string name="company">Company</string>
    <string name="designation">DESIGNATION</string>
    <string name="living_in">LIVING IN</string>
    <string name="technologies">TECHNOLOGIES</string>
    <string name="event_attending">EVENT ATTENDING</string>
    <string name="test">Goa Developer\'s Summit</string>
    <string name="save">Save</string>
    <string name="abhishek_vengurlekar"><p>Abhishek Vengurlekar</p></string>
    <string name="accept_the_invites_to_start_chatting">Accept the invites to start chatting</string>
    <string name="invites">Invites</string>
    <string name="verify_your_mobile_number">Verify your mobile number</string>
    <string name="enter_otp_sent_to_91_9284273396">Enter OTP sent to +91 9284273396</string>
    <string name="Continue">continue</string>
    <string name="enter_message">Enter Message</string>
    <string name="send">Send</string>
    <string name="last_message_will_be_displayed">Last message will be displayed khbkhlhb ihbibhby</string>
    <string name="messages_2">Messages 2</string>
    <string name="search_connection">Search Connection</string>
    <string name="profile_name">Profile Name</string>
    <string name="company1">Company:</string>
    <string name="company_name">Company Name</string>
    <string name="designation1">Designation:</string>
    <string name="sr_software_developer">Sr. Software Developer</string>
    <string name="skills">Skills:</string>
    <string name="all_skills_will_display_here">All skills will display here</string>
    <string name="example_of_modal_bottomsheet">Example of Modal BottomSheet</string>
    <string name="hi_developers">Hi Developers</string>
    <string name="d">—</string>
    <string name="example_of_persistent_bottom_sheet">Example of Persistent Bottom Sheet</string>
    <string name="unrfj">unrfj</string>
</resources>