<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F7F7F7"
            android:padding="20dp">

            <ImageView
                android:id="@+id/iv_show_profile"
                android:layout_width="300dp"
                android:layout_height="350dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/img"
                android:src="@drawable/gen_logo"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/tv_pn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_show_profile"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/profile_name"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_pn"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/company1"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_cn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_pn"
                android:layout_marginStart="5dp"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@id/tv1"
                android:text="@string/company_name"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_cn"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/designation1"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_designation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_cn"
                android:layout_marginStart="5dp"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@id/tv2"
                android:text="@string/sr_software_developer"
                android:textColor="@color/black"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_designation"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/skills"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_skills"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_designation"
                android:layout_marginStart="5dp"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@id/tv3"
                android:text="@string/all_skills_will_display_here"
                android:textColor="@color/black"
                android:textSize="19sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>