<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/persistent_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="56dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:layout_marginTop="0dp"
        android:background="#E8E5E5"
        android:gravity="bottom|center_horizontal"
        android:text="@string/d"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="#E8E5E5"
        android:gravity="center|top"
        android:text="@string/example_of_persistent_bottom_sheet"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/unrfj">
    </ImageView>

    <Button
        android:id="@+id/btn_dev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B5E0F1"
        android:text="@string/hi_developers"
        android:textColor="#000"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>