<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_profile_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="50dp"
        android:layout_marginStart="10dp"
        android:layout_centerVertical="true">

        <ImageView
            android:id="@+id/iv_chat_profile_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img"
            android:scaleType="fitXY"
            android:src="@drawable/abhishek_profile_pic" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_chat_pn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abhishek_vengurlekar"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tv_chat_lm"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:maxLines="1"
        android:text="@string/last_message_will_be_displayed"
        android:textColor="@color/black"
        android:textSize="16sp" />

</RelativeLayout>