<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:id="@+id/event_carousel_item"
    android:background="#343E49">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_event_image"
        android:layout_width="180dp"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:src="@drawable/test_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_event_image"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_eventTitle"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/event_carousel_title"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/img"
                android:src="@drawable/icon_location"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/tv_eventLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/event_carousel_venue"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll3"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/img"
                android:src="@drawable/icon_event_date"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/tv_eventDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/event_carousel_date"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll4"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/img"
                android:src="@drawable/icon_event_time"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/tv_eventTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/event_carousel_time"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll5"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingStart="5dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/tv_eventDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_carousel_description"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_ec_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:paddingStart="110dp"
        android:paddingEnd="110dp"
        android:text="@string/buy_tickets"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll" />

</androidx.constraintlayout.widget.ConstraintLayout>