<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="20dp"
    tools:context=".MainActivity">

    <com.jackandphantom.carouselrecyclerview.CarouselRecyclerview
        android:id="@+id/carousel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_mobile"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="#4350d9"
            android:drawableStart="@drawable/icon_phone"
            android:text="@string/continue_with_mobile_number"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#BDBBBB"
            android:drawableStart="@drawable/icon_email"
            android:drawableTint="@color/black"
            android:padding="15dp"
            android:text="@string/continue_with_email"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginTop="140dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/i_agree_to_the_terms_conditions_and_privacy_policy"
            android:textSize="15sp"
            android:textColor="@color/black" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>