<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MobileLogInActivity">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        android:scaleType="centerCrop"
        android:src="@drawable/icon_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/login_with_your_mobile_number"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_phone"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/mobile_number"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20sp"
            android:inputType="number"
            tools:text="+91 9284273396"
            android:background="@drawable/custom_text_input_layout"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_conti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/continue_1"
        android:textStyle="bold"
        android:textSize="15sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>


<!--<EditText-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="50dp"-->
<!--android:layout_margin="30dp"-->
<!--android:hint="Mobile Number"-->
<!--app:layout_constraintTop_toBottomOf="@+id/tv_title"-->
<!--app:layout_constraintStart_toStartOf="parent"-->
<!--app:layout_constraintEnd_toEndOf="parent"-->
<!--android:autofillHints="+91 9284273396"-->
<!--android:inputType="textPhonetic" />-->